k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neo4j
  labels:
    istio-injection: enabled
