k8s/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: neo4j-gateway
  namespace: neo4j
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "neo4j.example.com"
    - port:
        number: 7687
        name: bolt
        protocol: TCP
      hosts:
        - "neo4j.example.com"
